<resources>
    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>
    <string name="question_1">1)What is the common name of NaCl?</string>
    <string name="question_1_option_A">Common Salt</string>
    <string name="question_1_option_B">Black Salt</string>
    <string name="question_1_option_C">Sodium Phosphate</string>
    <string name="question_1_option_D">Epsoms Salt</string>
    <string name="question_2">2)The first noble gas in the periodic table is(He,Ne,Xe,Ar or Rn)</string>
    <string name="question_3">3)Which of the following is not true for carbanion?</string>
    <string name="question_3_option_A">Carbon carrying the charge has 9 valence electrons</string>
    <string name="question_3_option_B">They are formed by homolytic fission</string>
    <string name="question_3_option_C">They are paramagnetic</string>
    <string name="question_3_option_D">The carbon carrying the charge is sp3 hybridized</string>
    <string name="question_4">4)Name a force that keeps molecules together.</string>
    <string name="question_4_option_A">Friendship</string>
    <string name="question_4_option_B">Gravity</string>
    <string name="question_4_option_C">Attraction</string>
    <string name="question_4_option_D">Magnetic Force</string>
    <string name="question_5">5)The most abundant rare gas in the atmosphere is(He,Ne,Ar or Xe)?</string>
    <string name="question_6">6)Which of the following are states of matter?</string>
    <string name="question_6_option_A">Solids</string>
    <string name="question_6_option_B">Liquids</string>
    <string name="question_6_option_C">Gases</string>
    <string name="question_6_option_D">Crystal</string>
    <string name="question_7">7)The nuclear particles which are assumed to hold the nucleons together are</string>
    <string name="question_7_option_A">electrons</string>
    <string name="question_7_option_B">mesons</string>
    <string name="question_7_option_C">positron</string>
    <string name="question_7_option_D">neutrons</string>
    <string name="question_8">8)The metal that is used as a catalyst in the hydrogenation of oils is(Ni,Pb,Cu or Pt)?</string>
    <string name="question_9">9)Which of the following are true for metals?</string>
    <string name="question_9_option_A">Gaseous at room temperature</string>
    <string name="question_9_option_B">Malleable</string>
    <string name="question_9_option_C">Ductile</string>
    <string name="question_9_option_D">Good Electrical Conductors</string>
    <string name="submit_button_text">Submit</string>
    <string name="edit_text">Answer Here....</string>
</resources>